Tested the GardenDetailsController with unit and integration tests